--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
-body,
-html {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
+body, html {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
 body {
-  font-family: 'Segoe UI', Helvetica Nenu, Helvetica, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Helvetca Nenu, Helvetca, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
   background-image: linear-gradient(180deg, #dddbd1, #d2dbdc);
 }
 
 .top {
-  height: 130px;
+  height:130px ;
   width: 100%;
   background-color: #009688;
   position: fixed;
@@ -29,7 +28,7 @@ body {
 
 .profile-pic {
   height: 40px;
-  width: 40px
+  width: 40px;
 }
 
 .form-rounded {
@@ -39,7 +38,7 @@ body {
 .friend-pic {
   height: 50px;
   width: 50px;
-  margin-left: -10px;
+  margin-left:-10px
 }
 
 .name {
@@ -54,7 +53,7 @@ body {
 }
 
 .icon {
-  font-size: 15px;
+  font-size: 20px;
   color: #9CA1A3;
 }
 
@@ -70,18 +69,18 @@ body {
   display: inline-block;
 }
 
-.time {
-  font-size: 10px;
-  color: #9CA1A3;
-  margin-top: 3%;
-  margin-left: 1%;
-}
-
 .sent {
   background-color: whitesmoke;
   border-radius: 1rem;
   padding: 10px 15px;
   display: inline-block;
+}
+
+.time {
+  font-size: 10px;
+  color: #9CA1A3;
+  margin-top: 3%;
+  margin-left: 1%;
 }
 
 .card {
@@ -90,85 +89,41 @@ body {
 
 #messages {
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: hidden
 }
 
 .dropdown-toggle::before {
   display: none !important;
 }
 
+/* /////////////////////////////////// */
 
+/* The container <div> - needed to position the dropdown content */
+.dropleft {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
 .dropdown-menu {
   display: none;
-  /*hide the menu*/
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
-.open .dropdown-menu {
+/* Links inside the dropdown */
+.dropdown-menu a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
   display: block;
-  /*show the menu when its parent has class "open"*/
+}
+.show {
+  display: block;
 }
 
-.text-input {
-  height: 15%;
+/* ////////////////////////////////////// */
 
-}
-
-
-
-@media only screen and (max-width: 360px) {
-  .dropleft {
-    position: absolute;
-    right: -270px;
-    bottom: 25px;
-  }
-
-  .arrow {
-    position: absolute;
-    bottom: -15px;
-  }
-
-  .picc {
-    position: absolute;
-    bottom: -9px;
-  }
-
-  .search-icon {
-    position: absolute;
-    right: -140px;
-    bottom: 15px;
-  }
-
-  .paperclip-icon {
-    position: absolute;
-    right: -185px;
-    bottom: 15px;
-  }
-
-  .ellipsis-icon {
-    position: absolute;
-    right: -218px;
-    bottom: 15px;
-  }
-
-  #details-container {
-    position: absolute;
-    right: -50px;
-
-  }
-  
-  .text-input {
-    height: 15%;
-    
-  }
-  
-  .user-details {
-    margin-top: 20px;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .arrow {
-    position: absolute;
-    bottom: -11px;
-  }
-}
